--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,7 +7,10 @@
 	 <% end %>	
 </p>
 
-<p><%= image_tag @article.image.url %></p>
+
+<% if @article.image_file_name %>
+	<p><%= image_tag @article.image.url %></p>
+<% end %>
 
 <p><%= @article.body %></p>
 
@@ -18,6 +21,8 @@
 
 <%= link_to "<< Back to Articles List", articles_path %>
 
+<% if logged_in? %>
 <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
 
 <%= link_to "edit", edit_article_path(@article) %>
+<% end %>
